@@ -16,22 +16,30 @@ install:
   - bash -c "echo $APTPACKAGES"
   - sudo apt-get install $APTPACKAGES
   - pip install tox
+  # the next part is for the security tests only.
+  - wget https://github.com/drwetter/testssl.sh/archive/v2.9.5-5.tar.gz -O testssl.tar.gz
+  - tar -xvzf testssl.tar.gz
+  - mv -t deluge/tests/data testssl.sh-2.9.5-5/testssl.sh testssl.sh-2.9.5-5/etc/
 
 env:
   global:
     - APTPACKAGES="python-libtorrent"
     - APTPACKAGES_GTKUI="python-gobject python-glade2"
     - DISPLAY=:99.0
-  matrix:
-    - TOX_ENV=pydef
-    - TOX_ENV=flake8
-#    - TOX_ENV=flake8-complexity
-    - TOX_ENV=docs
-#    - TOX_ENV=todo
-    - TOX_ENV=trial              APTPACKAGES="$APTPACKAGES $APTPACKAGES_GTKUI"
-    - TOX_ENV=pygtkui            APTPACKAGES="$APTPACKAGES $APTPACKAGES_GTKUI"
-#    - TOX_ENV=testcoverage       APTPACKAGES="$APTPACKAGES $APTPACKAGES_GTKUI"
-    - TOX_ENV=plugins
+
+matrix:
+  include:
+    - env: TOX_ENV=pydef
+    - if: commit_message =~ SECURITY_TEST
+      env: TOX_ENV=security
+    - env: TOX_ENV=flake8
+    #- env:  TOX_ENV=flake8-complexity
+    - env: TOX_ENV=docs
+    #- env: TOX_ENV=todo
+    - env: TOX_ENV=trial              APTPACKAGES="$APTPACKAGES $APTPACKAGES_GTKUI"
+    - env: TOX_ENV=pygtkui            APTPACKAGES="$APTPACKAGES $APTPACKAGES_GTKUI"
+    #- env: TOX_ENV=testcoverage       APTPACKAGES="$APTPACKAGES $APTPACKAGES_GTKUI"
+    - env: TOX_ENV=plugins
 
 virtualenv:
   system_site_packages: true
