@@ -52,7 +52,11 @@ log_cli_level = CRITICAL
 [testenv:pydef]
 commands =
     python -c "import libtorrent as lt; print(lt.__version__)"
-    pytest -v --basetemp=_pytest_temp -s -m "not (todo or gtkui)" deluge/tests
+    pytest -v --basetemp=_pytest_temp -s -m "not (todo or gtkui or security)" deluge/tests
+
+[testenv:security]
+setenv = SECURITY_TESTS = True
+commands = pytest -v --basetemp=_pytest_temp -s -m "security" deluge/tests/
 
 [testenv:pygtkui]
 commands = pytest -v --basetemp=_pytest_temp -s -m "gtkui" deluge/tests
